<resources>
    <string name="app_name">LearnKotlinApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="random_heading">Here is a random number between 0 and %d Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">count</string>
    <string name="r">R</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity1_button">Activity 1 - Basic Counter</string>
    <string name="textview_0">0</string>
    <string name="activity2_button">activity 2 - Recycler View</string>
    <string name="activity3_button">activity 3 - To Do List</string>
    <string name="home_button">Home</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="done">Done</string>
    <string name="description">Enter Task Description</string>
    <string name="add_a_task">Add A Task</string>
    <string name="alert_title">Task</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_4">Activity4</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="countdown_text">10:00</string>
    <string name="title_activity_activity5__main">Activity5_Main</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
