<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment" />

    <Button
        android:id="@+id/activity1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity1_button" />

    <Button
        android:id="@+id/activity2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity2_button" />

</LinearLayout>